sources/CPP/include/Ers/ErsApiFunctions.h

// Temporary typedef until we found a good place for shared information.
typedef uint64_t EntityID;
    ERS_IMPORT void ERS_Logger_AddCallback(void(*logCallback)(int level, const char* message, void* callbackData), void* callbackData);
    ERS_IMPORT uint32_t ERS_GlobalComponentRegistry_RegisterScriptBehavior(const char* name, void*(*CreateInstance)(void* handle), void* handle, void(*OnCreation)(void* scriptBehaviorInstance), void(*OnAwake)(void* scriptBehaviorInstance), void(*OnStart)(void* scriptBehaviorInstance), void(*OnUpdate)(void* scriptBehaviorInstance), void(*OnLateUpdate)(void* scriptBehaviorInstance), void(*OnDestroy)(void* scriptBehaviorInstance), void(*OnEntering)(void* scriptBehaviorInstance, EntityID child), void(*OnEntered)(void* scriptBehaviorInstance, EntityID child), void(*OnExiting)(void* scriptBehaviorInstance, EntityID child), void(*OnExited)(void* scriptBehaviorInstance, EntityID child), void(*OnInputChannelReady)(void* scriptBehaviorInstance, EntityID inputChannel), void(*OnOutputChannelReady)(void* scriptBehaviorInstance, EntityID outputChannel), void(*OnReceive)(void* scriptBehaviorInstance, EntityID inputChannel, EntityID child), void(*Serialization)(void* scriptBehaviorInstance, void* serializer), void(*OnSubModelMove)(void* scriptBehaviorInstance, EntityID newConnectedEntity));
    ERS_IMPORT void* ERS_EventScheduler_RegisterLocalEventType(uint64_t typeIdentifier, void(*callback)(void* data), void(*destructor)(void* data), void(*serialize)(void* data, void* serializerHandle), void*(*allocator)(), const char* uniqueName, const char* sourceLibrary, size_t size, const char* filePath, int lineNumber);
    ERS_IMPORT void* ERS_EventScheduler_RegisterSyncEventType(uint64_t eventTypeIdentifier, void(*onSenderSideCallback)(), void(*onTargetSideCallback)(), void(*serializeData)(void* dataContext, void* serializerHandle), uint32_t dataBlockSize, const char* name, const char* sourceLibrary, const char* filePath, int lineNumber);
    ERS_IMPORT void ERS_SubModel_AddSubModelContext(void* subModelHandle, uint32_t SubModelContextTypeIdx, const char* name, void* SubModelContextPtr, void(*destructor)(void* contextHandle));
    ERS_IMPORT void ERS_ModelStructureWidget_Widget(void* ptr, void* modelContainerPtr, int heatMapMode);
    ERS_IMPORT bool ERS_ModelStructureWidget_Get_ShowGrid(void* ptr);
    ERS_IMPORT void ERS_ModelStructureWidget_Set_ShowGrid(void* ptr, bool value);
    ERS_IMPORT int ERS_ModelStructureWidget_Get_SelectedHeatMapMode(void* ptr);
    ERS_IMPORT void ERS_ModelStructureWidget_Set_SelectedHeatMapMode(void* ptr, int value);
    ERS_IMPORT bool ERS_ModelStructureWidget_Get_ShowSimulatorGroups(void* ptr);
    ERS_IMPORT void ERS_ModelStructureWidget_Set_ShowSimulatorGroups(void* ptr, bool value);
    ERS_IMPORT bool ERS_ModelStructureWidget_Get_ShowSimulatorSuperGroups(void* ptr);
    ERS_IMPORT void ERS_ModelStructureWidget_Set_ShowSimulatorSuperGroups(void* ptr, bool value);
    ERS_IMPORT int ERS_ModelStructureWidget_Get_SelectedGroupStyle(void* ptr);
    ERS_IMPORT void ERS_ModelStructureWidget_Set_SelectedGroupStyle(void* ptr, int value);
    ERS_IMPORT void* ERS_RunControlsWidget_Create();
    ERS_IMPORT void ERS_RunControlsWidget_Destroy(void* ptr);
    ERS_IMPORT void ERS_RunControlsWidget_Window(void* ptr, void* modelContainerPtr, bool* isRunning, const char* name);
    ERS_IMPORT void ERS_RunControlsWidget_Widget(void* ptr, void* modelContainerPtr, bool* isRunning);
    ERS_IMPORT void* ERS_SimulatorInspectorWidget_Create();
    ERS_IMPORT void ERS_SimulatorInspectorWidget_Destroy(void* ptr);
    ERS_IMPORT void ERS_SimulatorInspectorWidget_Window(void* ptr, void* simulatorPtr, const char* name, bool* open, int flags);
    ERS_IMPORT void ERS_SimulatorInspectorWidget_Widget(void* ptr, void* simulatorPtr);
    ERS_IMPORT void* ERS_SpeedupWidget_Create();
    ERS_IMPORT void ERS_SpeedupWidget_Destroy(void* ptr);
    ERS_IMPORT void ERS_SpeedupWidget_Window(void* ptr, const char* name, bool* open, int flags);
    ERS_IMPORT void ERS_SpeedupWidget_Widget(void* ptr);
    ERS_IMPORT void ERS_SpeedupWidget_Update(void* ptr, const void* modelContainerPtr);
    ERS_IMPORT void* ERS_VisualizationWidget_Create();
    ERS_IMPORT void ERS_VisualizationWidget_Destroy(void* ptr);
    ERS_IMPORT void ERS_VisualizationWidget_Window(void* ptr, void* renderContextPtr, const char* name, bool* open, int flags);
    ERS_IMPORT void ERS_VisualizationWidget_Widget(void* ptr, void* renderContextPtr);
    ERS_IMPORT bool ERS_VisualizationWidget_Get_Is3DMode(void* ptr);
    ERS_IMPORT void ERS_VisualizationWidget_Set_Is3DMode(void* ptr, bool value);
    ERS_IMPORT void ERS_Camera2D_UpdateTransform(void* instance, int screenWidth, int screenHeight);
    ERS_IMPORT float ERS_Camera2D_GetPositionX(void* instance);
    ERS_IMPORT void ERS_Camera2D_SetPositionX(void* instance, float x);
    ERS_IMPORT float ERS_Camera2D_GetPositionY(void* instance);
    ERS_IMPORT void ERS_Camera2D_SetPositionY(void* instance, float y);
    ERS_IMPORT float ERS_Camera2D_GetZoom(void* instance);
    ERS_IMPORT void ERS_Camera2D_SetZoom(void* instance, float zoom);
    ERS_IMPORT float ERS_Camera2D_SizePerPixel(void* instance);
    ERS_IMPORT void ERS_Camera2D_GetWorldPos(void* instance, int screenWidth, int screenHeight, float screenPosX, float screenPosY, float* resultX, float* resultY);
    ERS_IMPORT void* ERS_Camera2DController_Create(void* camera2DPtr);
    ERS_IMPORT void ERS_Camera2DController_Destroy(void* corePtr);
    ERS_IMPORT void ERS_Camera2DController_ControlCamera(void* instance, int screenWidth, int screenHeight);
    ERS_IMPORT void ERS_Camera2DController_SetScreenSize(void* instance, int width, int height);
    ERS_IMPORT void ERS_Camera2DController_Update(void* instance, float mouseX, float mouseY);
    ERS_IMPORT void ERS_Camera2DController_StartDragging(void* instance, float mouseX, float mouseY);
    ERS_IMPORT void ERS_Camera2DController_StopDragging(void* instance);
    ERS_IMPORT void ERS_Camera2DController_Zoom(void* instance, float baseF, float power);
    ERS_IMPORT float ERS_Camera3D_GetPositionX(void* instance);
    ERS_IMPORT void ERS_Camera3D_SetPositionX(void* instance, float x);
    ERS_IMPORT float ERS_Camera3D_GetPositionY(void* instance);
    ERS_IMPORT void ERS_Camera3D_SetPositionY(void* instance, float y);
    ERS_IMPORT float ERS_Camera3D_GetPositionZ(void* instance);
    ERS_IMPORT void ERS_Camera3D_SetPositionZ(void* instance, float z);
    ERS_IMPORT float ERS_Camera3D_GetLookAtX(void* instance);
    ERS_IMPORT void ERS_Camera3D_SetLookAtX(void* instance, float x);
    ERS_IMPORT float ERS_Camera3D_GetLookAtY(void* instance);
    ERS_IMPORT void ERS_Camera3D_SetLookAtY(void* instance, float y);
    ERS_IMPORT float ERS_Camera3D_GetLookAtZ(void* instance);
    ERS_IMPORT void ERS_Camera3D_SetLookAtZ(void* instance, float z);
    ERS_IMPORT float ERS_Camera3D_GetFovInTurns(void* instance);
    ERS_IMPORT void ERS_Camera3D_SetFovInTurns(void* instance, float fov);
    ERS_IMPORT float ERS_Camera3D_GetZNear(void* instance);
    ERS_IMPORT void ERS_Camera3D_SetZNear(void* instance, float zNear);
    ERS_IMPORT float ERS_Camera3D_GetZFar(void* instance);
    ERS_IMPORT void ERS_Camera3D_SetZFar(void* instance, float zFar);
    ERS_IMPORT void ERS_Camera3D_SetLookAt(void* instance, float x, float y, float z);