sources/CSharp/src/ErsApiFunctions.cs


        [DllImport("ers-engine", CallingConvention = CallingConvention.Cdecl)]
        public static extern void ERS_ModelStructureWidget_Widget(IntPtr ptr, IntPtr modelContainerPtr, int heatMapMode);

        [return: MarshalAs(UnmanagedType.I1)]
        [DllImport("ers-engine", CallingConvention = CallingConvention.Cdecl)]
        public static extern bool ERS_ModelStructureWidget_Get_ShowGrid(IntPtr ptr);

        [DllImport("ers-engine", CallingConvention = CallingConvention.Cdecl)]
        public static extern void ERS_ModelStructureWidget_Set_ShowGrid(IntPtr ptr, [MarshalAs(UnmanagedType.I1)] bool value);

        [DllImport("ers-engine", CallingConvention = CallingConvention.Cdecl)]
        public static extern int ERS_ModelStructureWidget_Get_SelectedHeatMapMode(IntPtr ptr);

        [DllImport("ers-engine", CallingConvention = CallingConvention.Cdecl)]
        public static extern void ERS_ModelStructureWidget_Set_SelectedHeatMapMode(IntPtr ptr, int value);

        [return: MarshalAs(UnmanagedType.I1)]
        [DllImport("ers-engine", CallingConvention = CallingConvention.Cdecl)]
        public static extern bool ERS_ModelStructureWidget_Get_ShowSimulatorGroups(IntPtr ptr);

        [DllImport("ers-engine", CallingConvention = CallingConvention.Cdecl)]
        public static extern void ERS_ModelStructureWidget_Set_ShowSimulatorGroups(IntPtr ptr, [MarshalAs(UnmanagedType.I1)] bool value);

        [return: MarshalAs(UnmanagedType.I1)]
        [DllImport("ers-engine", CallingConvention = CallingConvention.Cdecl)]
        public static extern bool ERS_ModelStructureWidget_Get_ShowSimulatorSuperGroups(IntPtr ptr);

        [DllImport("ers-engine", CallingConvention = CallingConvention.Cdecl)]
        public static extern void ERS_ModelStructureWidget_Set_ShowSimulatorSuperGroups(IntPtr ptr, [MarshalAs(UnmanagedType.I1)] bool value);

        [DllImport("ers-engine", CallingConvention = CallingConvention.Cdecl)]
        public static extern int ERS_ModelStructureWidget_Get_SelectedGroupStyle(IntPtr ptr);

        [DllImport("ers-engine", CallingConvention = CallingConvention.Cdecl)]
        public static extern void ERS_ModelStructureWidget_Set_SelectedGroupStyle(IntPtr ptr, int value);

        [DllImport("ers-engine", CallingConvention = CallingConvention.Cdecl)]
        public static extern IntPtr ERS_RunControlsWidget_Create();

        [DllImport("ers-engine", CallingConvention = CallingConvention.Cdecl)]
        public static extern void ERS_RunControlsWidget_Destroy(IntPtr ptr);

        [DllImport("ers-engine", CallingConvention = CallingConvention.Cdecl)]
        public static extern unsafe void ERS_RunControlsWidget_Window(IntPtr ptr, IntPtr modelContainerPtr, bool* isRunning, /* ASCII String */ byte* name);

        [DllImport("ers-engine", CallingConvention = CallingConvention.Cdecl)]
        public static extern unsafe void ERS_RunControlsWidget_Widget(IntPtr ptr, IntPtr modelContainerPtr, bool* isRunning);

        [DllImport("ers-engine", CallingConvention = CallingConvention.Cdecl)]
        public static extern IntPtr ERS_SimulatorInspectorWidget_Create();

        [DllImport("ers-engine", CallingConvention = CallingConvention.Cdecl)]
        public static extern void ERS_SimulatorInspectorWidget_Destroy(IntPtr ptr);

        [DllImport("ers-engine", CallingConvention = CallingConvention.Cdecl)]
        public static extern unsafe void ERS_SimulatorInspectorWidget_Window(IntPtr ptr, IntPtr simulatorPtr, /* ASCII String */ byte* name, bool* open, int flags);

        [DllImport("ers-engine", CallingConvention = CallingConvention.Cdecl)]
        public static extern void ERS_SimulatorInspectorWidget_Widget(IntPtr ptr, IntPtr simulatorPtr);

        [DllImport("ers-engine", CallingConvention = CallingConvention.Cdecl)]
        public static extern IntPtr ERS_SpeedupWidget_Create();

        [DllImport("ers-engine", CallingConvention = CallingConvention.Cdecl)]
        public static extern void ERS_SpeedupWidget_Destroy(IntPtr ptr);

        [DllImport("ers-engine", CallingConvention = CallingConvention.Cdecl)]
        public static extern unsafe void ERS_SpeedupWidget_Window(IntPtr ptr, /* ASCII String */ byte* name, bool* open, int flags);

        [DllImport("ers-engine", CallingConvention = CallingConvention.Cdecl)]
        public static extern void ERS_SpeedupWidget_Widget(IntPtr ptr);

        [DllImport("ers-engine", CallingConvention = CallingConvention.Cdecl)]
        public static extern void ERS_SpeedupWidget_Update(IntPtr ptr, IntPtr modelContainerPtr);

        [DllImport("ers-engine", CallingConvention = CallingConvention.Cdecl)]
        public static extern IntPtr ERS_VisualizationWidget_Create();

        [DllImport("ers-engine", CallingConvention = CallingConvention.Cdecl)]
        public static extern void ERS_VisualizationWidget_Destroy(IntPtr ptr);

        [DllImport("ers-engine", CallingConvention = CallingConvention.Cdecl)]
        public static extern unsafe void ERS_VisualizationWidget_Window(IntPtr ptr, IntPtr renderContextPtr, /* ASCII String */ byte* name, bool* open, int flags);

        [DllImport("ers-engine", CallingConvention = CallingConvention.Cdecl)]
        public static extern void ERS_VisualizationWidget_Widget(IntPtr ptr, IntPtr renderContextPtr);

        [return: MarshalAs(UnmanagedType.I1)]
        [DllImport("ers-engine", CallingConvention = CallingConvention.Cdecl)]
        public static extern bool ERS_VisualizationWidget_Get_Is3DMode(IntPtr ptr);

        [DllImport("ers-engine", CallingConvention = CallingConvention.Cdecl)]
        public static extern void ERS_VisualizationWidget_Set_Is3DMode(IntPtr ptr, [MarshalAs(UnmanagedType.I1)] bool value);

        [DllImport("ers-engine", CallingConvention = CallingConvention.Cdecl)]
        public static extern void ERS_Camera2D_UpdateTransform(IntPtr instance, int screenWidth, int screenHeight);

        [DllImport("ers-engine", CallingConvention = CallingConvention.Cdecl)]
        public static extern float ERS_Camera2D_GetPositionX(IntPtr instance);

        [DllImport("ers-engine", CallingConvention = CallingConvention.Cdecl)]
        public static extern void ERS_Camera2D_SetPositionX(IntPtr instance, float x);

        [DllImport("ers-engine", CallingConvention = CallingConvention.Cdecl)]
        public static extern float ERS_Camera2D_GetPositionY(IntPtr instance);

        [DllImport("ers-engine", CallingConvention = CallingConvention.Cdecl)]
        public static extern void ERS_Camera2D_SetPositionY(IntPtr instance, float y);

        [DllImport("ers-engine", CallingConvention = CallingConvention.Cdecl)]
        public static extern float ERS_Camera2D_GetZoom(IntPtr instance);

        [DllImport("ers-engine", CallingConvention = CallingConvention.Cdecl)]
        public static extern void ERS_Camera2D_SetZoom(IntPtr instance, float zoom);

        [DllImport("ers-engine", CallingConvention = CallingConvention.Cdecl)]
        public static extern float ERS_Camera2D_SizePerPixel(IntPtr instance);

        [DllImport("ers-engine", CallingConvention = CallingConvention.Cdecl)]
        public static extern void ERS_Camera2D_GetWorldPos(IntPtr instance, int screenWidth, int screenHeight, float screenPosX, float screenPosY, IntPtr resultX, IntPtr resultY);

        [DllImport("ers-engine", CallingConvention = CallingConvention.Cdecl)]
        public static extern IntPtr ERS_Camera2DController_Create(IntPtr camera2DPtr);

        [DllImport("ers-engine", CallingConvention = CallingConvention.Cdecl)]
        public static extern void ERS_Camera2DController_Destroy(IntPtr corePtr);

        [DllImport("ers-engine", CallingConvention = CallingConvention.Cdecl)]
        public static extern void ERS_Camera2DController_ControlCamera(IntPtr instance, int screenWidth, int screenHeight);

        [DllImport("ers-engine", CallingConvention = CallingConvention.Cdecl)]
        public static extern void ERS_Camera2DController_SetScreenSize(IntPtr instance, int width, int height);

        [DllImport("ers-engine", CallingConvention = CallingConvention.Cdecl)]
        public static extern void ERS_Camera2DController_Update(IntPtr instance, float mouseX, float mouseY);

        [DllImport("ers-engine", CallingConvention = CallingConvention.Cdecl)]
        public static extern void ERS_Camera2DController_StartDragging(IntPtr instance, float mouseX, float mouseY);

        [DllImport("ers-engine", CallingConvention = CallingConvention.Cdecl)]
        public static extern void ERS_Camera2DController_StopDragging(IntPtr instance);

        [DllImport("ers-engine", CallingConvention = CallingConvention.Cdecl)]
        public static extern void ERS_Camera2DController_Zoom(IntPtr instance, float baseF, float power);

        [DllImport("ers-engine", CallingConvention = CallingConvention.Cdecl)]
        public static extern float ERS_Camera3D_GetPositionX(IntPtr instance);

        [DllImport("ers-engine", CallingConvention = CallingConvention.Cdecl)]
        public static extern void ERS_Camera3D_SetPositionX(IntPtr instance, float x);

        [DllImport("ers-engine", CallingConvention = CallingConvention.Cdecl)]
        public static extern float ERS_Camera3D_GetPositionY(IntPtr instance);

        [DllImport("ers-engine", CallingConvention = CallingConvention.Cdecl)]
        public static extern void ERS_Camera3D_SetPositionY(IntPtr instance, float y);

        [DllImport("ers-engine", CallingConvention = CallingConvention.Cdecl)]
        public static extern float ERS_Camera3D_GetPositionZ(IntPtr instance);

        [DllImport("ers-engine", CallingConvention = CallingConvention.Cdecl)]
        public static extern void ERS_Camera3D_SetPositionZ(IntPtr instance, float z);

        [DllImport("ers-engine", CallingConvention = CallingConvention.Cdecl)]
        public static extern float ERS_Camera3D_GetLookAtX(IntPtr instance);

        [DllImport("ers-engine", CallingConvention = CallingConvention.Cdecl)]
        public static extern void ERS_Camera3D_SetLookAtX(IntPtr instance, float x);

        [DllImport("ers-engine", CallingConvention = CallingConvention.Cdecl)]
        public static extern float ERS_Camera3D_GetLookAtY(IntPtr instance);

        [DllImport("ers-engine", CallingConvention = CallingConvention.Cdecl)]
        public static extern void ERS_Camera3D_SetLookAtY(IntPtr instance, float y);

        [DllImport("ers-engine", CallingConvention = CallingConvention.Cdecl)]
        public static extern float ERS_Camera3D_GetLookAtZ(IntPtr instance);

        [DllImport("ers-engine", CallingConvention = CallingConvention.Cdecl)]
        public static extern void ERS_Camera3D_SetLookAtZ(IntPtr instance, float z);

        [DllImport("ers-engine", CallingConvention = CallingConvention.Cdecl)]
        public static extern float ERS_Camera3D_GetFovInTurns(IntPtr instance);

        [DllImport("ers-engine", CallingConvention = CallingConvention.Cdecl)]
        public static extern void ERS_Camera3D_SetFovInTurns(IntPtr instance, float fov);

        [DllImport("ers-engine", CallingConvention = CallingConvention.Cdecl)]
        public static extern float ERS_Camera3D_GetZNear(IntPtr instance);

        [DllImport("ers-engine", CallingConvention = CallingConvention.Cdecl)]
        public static extern void ERS_Camera3D_SetZNear(IntPtr instance, float zNear);

        [DllImport("ers-engine", CallingConvention = CallingConvention.Cdecl)]
        public static extern float ERS_Camera3D_GetZFar(IntPtr instance);

        [DllImport("ers-engine", CallingConvention = CallingConvention.Cdecl)]
        public static extern void ERS_Camera3D_SetZFar(IntPtr instance, float zFar);

        [DllImport("ers-engine", CallingConvention = CallingConvention.Cdecl)]
        public static extern void ERS_Camera3D_SetLookAt(IntPtr instance, float x, float y, float z);
